# example-soralog

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  logging_object.cpp  logging_object.hpp  main.cpp
